aguns patterns foi implementado e o botao salvar foi inserido na tela perfil

--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div class="container">
-    <ion-button fill="clear">Editar</ion-button>
+    <ion-button fill="clear" id="btn-editar">Editar</ion-button>
     <div class="row">
       <div class="form">
         <ion-item>
@@ -96,6 +96,7 @@
             <ion-select-option value="Sompo">Sompo Seguros</ion-select-option>
           </ion-select>
         </ion-item>
+        <ion-button fill="clear" style="display: none;" id="btn-salvar">Salvar</ion-button>
       </div>
     </div>
   </div>
