--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -31,7 +31,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">CPF</ion-label>
-      <ion-input formControlName="cpf" type='number'></ion-input>
+      <ion-input formControlName="cpf" type='text'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Endereço</ion-label>
@@ -75,7 +75,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">CEP</ion-label>
-      <ion-input formControlName="cep" type='number'></ion-input>
+      <ion-input formControlName="cep" type='text'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Convênio</ion-label>
