tela de busca e lista categoria

--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -8,5 +8,32 @@
 </ion-header>
 <ion-content>
   <ion-searchbar showCancelButton="always"></ion-searchbar>
-  <div id="map"></div>
+  <h2>Buscar Recentes</h2>
+  <p>Cardiologista</p>
+  <h2>Categorias</h2>
+  <a href="#">Todas as categorias</a>
+  <ion-row>
+    <ion-col><ion-button>
+      Cardiologista
+    </ion-button></ion-col>
+    <ion-col><ion-button>
+      Pediatra
+    </ion-button></ion-col>
+  </ion-row>
+  <ion-row>
+      <ion-col><ion-button>
+        Psicólogo
+      </ion-button></ion-col>
+      <ion-col><ion-button>
+        Oftalmologista
+      </ion-button></ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col><ion-button>
+          Ortopedista
+        </ion-button></ion-col>
+        <ion-col><ion-button>
+          Ortodontista
+        </ion-button></ion-col>
+      </ion-row>
 </ion-content>
