foi umas coisas ai

--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -38,6 +38,10 @@
       <ion-input formControlName="endereco" type='text'></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">Número</ion-label>
+      <ion-input formControlName="numero" type='number'></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">Cidade</ion-label>
       <ion-input formControlName="cidade" type='text'></ion-input>
     </ion-item>
