--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -30,7 +30,11 @@
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Endereço:</ion-label>
-          <ion-input type='text' disabled>Rua Tiradentes n402, Centro</ion-input>
+          <ion-input type='text' disabled>Rua Tiradentes, Centro</ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Número</ion-label>
+          <ion-input type='number' disabled>402</ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Cidade:</ion-label>
