--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,7 +21,7 @@
       <ion-label position="floating">Senha</ion-label>
       <ion-input formControlName="password" type='password'></ion-input>
     </ion-item>
-    <ion-button [disabled]="!loginForm.valid" class="btn-entrar" (click)="openBuscarPage()">Entrar</ion-button>
+    <ion-button [disabled]="!loginForm.valid" class="btn-entrar" (click)="loginAuth()">Entrar</ion-button>
   </form>
   <!-- </div> -->
 </ion-content>
