--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -25,12 +25,16 @@
           <ion-input type='email' disabled>matheusvilela1104@gmail.com</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stakced">CPF:</ion-label>
-          <ion-input type='number' disabled>445.396.238-00</ion-input>
+          <ion-label position="stakced">CEP:</ion-label>
+          <ion-input type='number' disabled>12308-470</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stakced">Endereço:</ion-label>
-          <ion-input type='text' disabled>Rua Tiradentes, Centro</ion-input>
+          <ion-label position="stakced">Rua:</ion-label>
+          <ion-input type='text' disabled>Rua Tiradentes</ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stakced">Bairro:</ion-label>
+          <ion-input type='text' disabled>Centro</ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Número</ion-label>
@@ -71,10 +75,6 @@
             <ion-select-option value="SE">SE</ion-select-option>
             <ion-select-option value="TO">TO</ion-select-option>
           </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-label position="stakced">CEP:</ion-label>
-          <ion-input type='number' disabled>12308-470</ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Convênio:</ion-label>
