--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -11,7 +11,6 @@
   <div class="titulo">
     <h1 class="cadastro">Cadastro</h1>
   </div>
-  <!-- <div class="form"> -->
   <form [formGroup]="cadastroForm">
     <ion-item>
       <ion-label position="floating">Nome Completo</ion-label>
@@ -30,58 +29,32 @@
       <ion-input formControlName="password" type='password'></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">CPF</ion-label>
-      <ion-input formControlName="cpf" type='text'></ion-input>
+      <ion-label position="floating">CEP</ion-label>
+      <ion-input formControlName="cep" type='text'></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Endereço</ion-label>
-      <ion-input formControlName="endereco" type='text'></ion-input>
+      <ion-label position="floating">Rua</ion-label>
+      <ion-input formControlName="rua" type='text'></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Número</ion-label>
-      <ion-input formControlName="numero" type='number'></ion-input>
+      <ion-label position="floating">Bairro</ion-label>
+      <ion-input formControlName="bairro" type='text'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Cidade</ion-label>
       <ion-input formControlName="cidade" type='text'></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">Número</ion-label>
+      <ion-input formControlName="numero" type='number'></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">Estado</ion-label>
       <ion-select formControlName="estado">
-        <ion-select-option value="AC">AC</ion-select-option>
-        <ion-select-option value="AL">AL</ion-select-option>
-        <ion-select-option value="AP">AP</ion-select-option>
-        <ion-select-option value="AM">AM</ion-select-option>
-        <ion-select-option value="BA">BA</ion-select-option>
-        <ion-select-option value="CE">CE</ion-select-option>
-        <ion-select-option value="DF">DF</ion-select-option>
-        <ion-select-option value="ES">ES</ion-select-option>
-        <ion-select-option value="GO">GO</ion-select-option>
-        <ion-select-option value="MA">MA</ion-select-option>
-        <ion-select-option value="MT">MT</ion-select-option>
-        <ion-select-option value="MS">MS</ion-select-option>
-        <ion-select-option value="MG">MG</ion-select-option>
-        <ion-select-option value="PA">PA</ion-select-option>
-        <ion-select-option value="PB">PB</ion-select-option>
-        <ion-select-option value="PR">PR</ion-select-option>
-        <ion-select-option value="PE">PE</ion-select-option>
-        <ion-select-option value="PI">PI</ion-select-option>
-        <ion-select-option value="RJ">RJ</ion-select-option>
-        <ion-select-option value="RN">RN</ion-select-option>
-        <ion-select-option value="RS">RS</ion-select-option>
-        <ion-select-option value="RO">RO</ion-select-option>
-        <ion-select-option value="RR">RR</ion-select-option>
-        <ion-select-option value="SC">SC</ion-select-option>
-        <ion-select-option value="SP">SP</ion-select-option>
-        <ion-select-option value="SE">SE</ion-select-option>
-        <ion-select-option value="TO">TO</ion-select-option>
+        <ion-select-option *ngFor="let u of uf" >{{u.sigla}}</ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">CEP</ion-label>
-      <ion-input formControlName="cep" type='text'></ion-input>
-    </ion-item>
-    <ion-item>
+    <!-- <ion-item>
       <ion-label position="floating">Convênio</ion-label>
       <ion-select formControlName="convenio">
           <ion-select-option value="Allianz">Allianz</ion-select-option>
@@ -104,8 +77,7 @@
           <ion-select-option value="SulAmerica">SulAmérica Aetna</ion-select-option>
           <ion-select-option value="Sompo">Sompo Seguros</ion-select-option>
       </ion-select>
-    </ion-item>
-  <!-- </div> -->
+    </ion-item> -->
   </form>
   <ion-button class="btn-cadastro" (click)="openBuscarPage()">Cadastrar</ion-button>
 </ion-content>
