--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -54,30 +54,12 @@
         <ion-select-option *ngFor="let u of uf" >{{u.sigla}}</ion-select-option>
       </ion-select>
     </ion-item>
-    <!-- <ion-item>
+    <ion-item>
       <ion-label position="floating">Convênio</ion-label>
       <ion-select formControlName="convenio">
-          <ion-select-option value="Allianz">Allianz</ion-select-option>
-          <ion-select-option value="Amil">AMIL</ion-select-option>
-          <ion-select-option value="ativia">Ativia</ion-select-option>
-          <ion-select-option value="bradesco">Bradesco</ion-select-option>
-          <ion-select-option value="c.Aeronáutica">Comando da Aeronáutica</ion-select-option>
-          <ion-select-option value="economus">Economus</ion-select-option>
-          <ion-select-option value="eear">EEAR</ion-select-option>
-          <ion-select-option value="fusex">FUSEX</ion-select-option>
-          <ion-select-option value="Gama">Gama saúde</ion-select-option>
-          <ion-select-option value="g.sjc">Grupo São José Saúde</ion-select-option>
-          <ion-select-option value="l.Empresarial">Life Empresarial</ion-select-option>
-          <ion-select-option value="mediservice">Mediservice</ion-select-option>
-          <ion-select-option value="n.d.intermedica">Notre Dame Intermédica</ion-select-option>
-          <ion-select-option value="OMINT">OMINT</ion-select-option>
-          <ion-select-option value="policlin">Policlin Saúde</ion-select-option>
-          <ion-select-option value="pss">Porto Seguro Saúde</ion-select-option>
-          <ion-select-option value="Sabesprev">Sabesprev</ion-select-option>
-          <ion-select-option value="SulAmerica">SulAmérica Aetna</ion-select-option>
-          <ion-select-option value="Sompo">Sompo Seguros</ion-select-option>
+        <ion-select-option *ngFor="let u of agreements" value={{u._id}} >{{u.name}}</ion-select-option>
       </ion-select>
-    </ion-item> -->
+    </ion-item>
   </form>
   <ion-button class="btn-cadastro" (click)="createUser()">Cadastrar</ion-button>
 </ion-content>
