--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -14,45 +14,45 @@
       <div class="form">
         <ion-item>
           <ion-label position="stakced">Nome Completo:</ion-label>
-          <ion-input type='text' disabled="true"></ion-input>
+          <ion-input type='text' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Data Nacimento:</ion-label>
-          <ion-input type='number' disabled="true"></ion-input>
+          <ion-input type='number' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">E-mail:</ion-label>
-          <ion-input type='email' disabled="true"></ion-input>
+          <ion-input type='email' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">CEP:</ion-label>
-          <ion-input type='number' disabled="true"></ion-input>
+          <ion-input type='number' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Rua:</ion-label>
-          <ion-input type='text' disabled="true"></ion-input>
+          <ion-input type='text' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Bairro:</ion-label>
-          <ion-input type='text' disabled="true"></ion-input>
+          <ion-input type='text' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Número:</ion-label>
-          <ion-input type='number' disabled="true"></ion-input>
+          <ion-input type='number' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Cidade:</ion-label>
-          <ion-input type='text'disabled="true"></ion-input>
+          <ion-input type='text' [readonly]="isAvaliable"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Estado:</ion-label>
-          <ion-select disabled="true">
+          <ion-select>
             <ion-select-option *ngFor="let u of uf" >{{u.sigla}}</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item>
           <ion-label position="stakced">Convênio:</ion-label>
-          <ion-select disabled="true">
+          <ion-select>
             <ion-select-option *ngFor="let u of agreements" value={{u._id}} >{{u.name}}</ion-select-option>
           </ion-select>
         </ion-item>
