--- a/src/app/clinic-list/clinic-list.page.html
+++ b/src/app/clinic-list/clinic-list.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let c of clinics">
+  <ion-card *ngFor="let c of clinics" (click)="openClinicPerfil(c)">
     <ion-card-header>
       <ion-card-title>{{c.name}}</ion-card-title>
       <ion-card-subtitle>{{c.services.join(', ')}}</ion-card-subtitle>
